Fixed spacing

--- a/index.css
+++ b/index.css
@@ -61,8 +61,8 @@ body {
 #aboutmetext {
   font-size: 18px;
   color: #000000;
-  margin: 20px 45px 30px 45px;
-  padding: 20px;
+  margin: 5px 35px 10px 35px;
+  padding: 40px;
   border-style: solid;
   border-width: 2px;
 }
